Added a photo to Protein-pancakes and fixed a missing < in the heading for the title

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/low-cal-pizza.html">Low Cal Pizza</a>
-    <a href="recipes/protein-pancakes.html">Protein Pancakes</a>
+    <ui>
+    <li><a href="recipes/low-cal-pizza.html">Low Cal Pizza</a></li>
+    <li><a href="recipes/protein-pancakes.html">Protein Pancakes</a></li>
+    </ui>
     
 </body>
 </html>
