Added page content for low-cal-pizza Fixed a mistake on index.html where a ui tag should have been a ul tag Added a new html page for protein-shake

--- a/recipes/low-cal-pizza.html
+++ b/recipes/low-cal-pizza.html
@@ -6,6 +6,38 @@
 </head>
 <body>
     <h1>Low Cal Pizza</h1>
-    
+    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/01/cajun-pizza-bc98c6e.jpg?quality=90&webp=true&resize=300,272" alt="Picture of low calorie pizza">
+<br>
+
+<h1>Description</h1>
+
+<p>This protein pizza has 30 grams of protein per serving. The dough comes together in about 10 minutes and is made with just 2 simple ingredients. No yeast needed!</p>
+
+<h1>Ingredients</h1>
+
+<ul>
+    <li>Self-rising flour</li>
+    <li>Greek yogurt</li>
+    <li>Salt</li>
+    <li>Pizza sauce</li>
+    <li>Ground chicken</li>
+    <li>Yellow onion</li>
+    <li>Bell pepper</li>
+    <li>Shredded mozzarella</li>
+</ul>
+
+<h1>Steps</h1>
+
+<ol>
+    <li>Make dough: If you don’t have self-rising flour, make your own by combining flour with baking powder and salt in a large bowl. Add greek yogurt and additional salt to flour and stir to combine until a dough starts to form. If the dough is too thick, add more yogurt, 1 Tablespoon at a time. If the dough is too thin, add a sprinkle of more flour.</li>
+<br>
+    <li>Shape dough: Use your hands to shape the dough into a smooth ball until all the dry flour is gone. This should take about 2-3 minutes.</li>
+<br>
+    <li>Roll dough: Cover the dough ball completely in flour (this will prevent it from sticking to the counter or roller). Transfer the dough ball to a floured surface. Roll out the dough into a circle or rectangle shape using a rolling pin or smooth bottle, until about ¼ inch thick.</li>
+<br>
+    <li>Add toppings: Using your hands or a spatula, carefully transfer the dough to a lightly floured baking dish or pizza stone. Add sauce and spread over dough evenly, leaving at least ¼ inch space around the edges. Sprinkle on cooked ground chicken or turkey sausage, onion and red bell pepper evenly over pizza crust. Top with mozzarella cheese.</li>
+<br>
+    <li>Bake: Bake pizza for about 20 minutes at 400°F until cheese is browned and bubbly and crust is golden brown, rotating pan once halfway through. Remove from the oven, let cool for a few minutes and enjoy!</li>
+</ol>
 </body>
 </html>
