--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ui>
+<ul>
     <li><a href="recipes/low-cal-pizza.html">Low Cal Pizza</a></li>
     <li><a href="recipes/protein-pancakes.html">Protein Pancakes</a></li>
-    </ui>
+    <li><a href="recipes/protein-shake.html">Protein shake</a></li>
+</ul>
     
 </body>
 </html>
